--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
+# RStudio generated files #
+###########################
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
+
+# Project design files #
+########################
+*.jpg
+*.png
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.Trashes
+._*
