--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,10 @@
 .Rhistory
 .RData
 .Ruserdata
-
 # Project design files #
 ########################
 *.jpg
 *.png
-
 # Compiled source #
 ###################
 *.com
@@ -18,7 +16,6 @@
 *.exe
 *.o
 *.so
-
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -31,14 +28,13 @@
 *.rar
 *.tar
 *.zip
-
 # Logs and databases #
 ######################
 *.log
 *.sql
 *.sqlite
-
 # OS generated files #
 ######################
 .Trashes
 ._*
+ProteoPipe.Rout
