Added personal default .yaml file & its selection; improved result image handling for consecutive runs.

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 .Rhistory
 .RData
 .Ruserdata
-# Project design files #
+# Project design & default files #
 ########################
 *.jpg
 *.png
+*.yaml
 # Compiled source #
 ###################
 *.com
